--- a/data/pages/works_me_team.html
+++ b/data/pages/works_me_team.html
@@ -19,14 +19,14 @@
     <header class="header__PC">
         <ul class="navi-first__ul">
             <li class="navi-first__li">
-                <a href="members.html" class="bold">Members</a>
+                <a href="/data/pages/members.html" class="bold">Members</a>
             </li>
             <li class="navi-first__li navi-first__li__works">
                 <a href="#" class="bold">Works</a>
                     
             </li>
             <li class="navi-first__li">
-                <a href="about.html" class="bold">About</a>
+                <a href="/data/pages/about.html" class="bold">About</a>
             </li>
         </ul>
         <div class="navi__logo">
@@ -53,54 +53,54 @@
     </header>
     <div class="navi-second">
         <dl class="navi-second__dl">
-            <dt class="navi-second__dt"><a href="works_me_team.html">Team. Me</a></dt>
+            <dt class="navi-second__dt"><a href="/data/pages/works_me_team.html">Team. Me</a></dt>
             <dd class="navi-second__dd">
-                <a href="works_me_individual1.html">김나영</a>
+                <a href="/data/pages/works_me_individual1.html">김나영</a>
             </dd>
             <dd class="navi-second__dd">
-                <a href="works_me_individual2.html">김수빈</a>
+                <a href="/data/pages/works_me_individual2.html">김수빈</a>
             </dd>
             <dd class="navi-second__dd">
-                <a href="works_me_individual3.html">김재환</a>
+                <a href="/data/pages/works_me_individual3.html">김재환</a>
             </dd>
             <dd class="navi-second__dd">
-                <a href="works_me_individual4.html">배나영</a>
+                <a href="/data/pages/works_me_individual4.html">배나영</a>
             </dd>
             <dd class="navi-second__dd">
-                <a href="works_me_individual5.html">이황준</a>
-            </dd>
-        </dl>
-        <dl class="navi-second__dl">
-            <dt class="navi-second__dt"><a href="works_me_team.html">Team. Memo</a></dt>
-            <dd class="navi-second__dd">
-                <a href="works_memo_individual1.html">권성화</a>
-            </dd>
-            <dd class="navi-second__dd">
-                <a href="works_memo_individual2.html">권유리</a>
-            </dd>
-            <dd class="navi-second__dd">
-                <a href="works_memo_individual3.html">김희제</a>
-            </dd>
-            <dd class="navi-second__dd">
-                <a href="works_memo_individual4.html">신유진</a>
-            </dd>
-            <dd class="navi-second__dd">
-                <a href="works_memo_individual5.html">우승용</a>
+                <a href="/data/pages/works_me_individual5.html">이황준</a>
             </dd>
         </dl>
         <dl class="navi-second__dl">
-            <dt class="navi-second__dt"><a href="works_me_team.html">Team. Memory</a></dt>
+            <dt class="navi-second__dt"><a href="/data/pages/works_memo_team.html">Team. Memo</a></dt>
             <dd class="navi-second__dd">
-                <a href="works_memory_individual1.html">김민송</a>
+                <a href="/data/pages/works_memo_individual1.html">권성화</a>
             </dd>
             <dd class="navi-second__dd">
-                <a href="works_memory_individual2.html">박수빈</a>
+                <a href="/data/pages/works_memo_individual2.html">권유리</a>
             </dd>
             <dd class="navi-second__dd">
-                <a href="works_memory_individual3.html">서혜인</a>
+                <a href="/data/pages/works_memo_individual3.html">김희제</a>
             </dd>
             <dd class="navi-second__dd">
-                <a href="works_memory_individual4.html">이우진</a>
+                <a href="/data/pages/works_memo_individual4.html">신유진</a>
+            </dd>
+            <dd class="navi-second__dd">
+                <a href="/data/pages/works_memo_individual5.html">우승용</a>
+            </dd>
+        </dl>
+        <dl class="navi-second__dl">
+            <dt class="navi-second__dt"><a href="/data/pages/works_memory_team.html">Team. Memory</a></dt>
+            <dd class="navi-second__dd">
+                <a href="/data/pages/works_memory_individual1.html">김민송</a>
+            </dd>
+            <dd class="navi-second__dd">
+                <a href="/data/pages/works_memory_individual2.html">박수빈</a>
+            </dd>
+            <dd class="navi-second__dd">
+                <a href="/data/pages/works_memory_individual3.html">서혜인</a>
+            </dd>
+            <dd class="navi-second__dd">
+                <a href="/data/pages/works_memory_individual4.html">이우진</a>
             </dd>
         </dl>
     </div>
@@ -126,6 +126,7 @@
                 </svg>
             </a>
         </div>
+        <div class="underline"></div>
         <input type="checkbox" id="sidebar-icon">
                 <label for="sidebar-icon">
                     <span></span>
@@ -136,64 +137,65 @@
         <div class="sidebar">
             <ul class="navi-first__ul">
                 <li class="navi-first__li">
-                    <a href="members.html" class="bold">Members</a>
+                    <a href="/data/pages/about.html" class="bold">About</a>
                 </li>
                 <li class="navi-first__li navi-first__li__works">
                     <a href="#" class="bold">Works</a>
                     <dl class="navi-second__dl">
-                        <dt class="navi-second__dt"><a href="works_me_team.html">Team. Me ‣</a></dt>
+                        <dt class="navi-second__dt"><a href="/data/pages/works_me_team.html">Team. Me ‣</a></dt>
                         <dd class="navi-second__dd">
-                            <a href="works_me_individual1.html">김나영</a>
+                            <a href="/data/pages/works_me_individual1.html">김나영</a>
                         </dd>
                         <dd class="navi-second__dd">
-                            <a href="works_me_individual2.html">김수빈</a>
+                            <a href="/data/pages/works_me_individual2.html">김수빈</a>
                         </dd>
                         <dd class="navi-second__dd">
-                            <a href="works_me_individual3.html">김재환</a>
+                            <a href="/data/pages/works_me_individual3.html">김재환</a>
                         </dd>
                         <dd class="navi-second__dd">
-                            <a href="works_me_individual4.html">배나영</a>
+                            <a href="/data/pages/works_me_individual4.html">배나영</a>
                         </dd>
                         <dd class="navi-second__dd">
-                            <a href="works_me_individual5.html">이황준</a>
-                        </dd>
-                    </dl>
-                    <dl class="navi-second__dl">
-                        <dt class="navi-second__dt"><a href="works_me_team.html">Team. Memo ‣</a></dt>
-                        <dd class="navi-second__dd">
-                            <a href="works_memo_individual1.html">권성화</a>
-                        </dd>
-                        <dd class="navi-second__dd">
-                            <a href="works_memo_individual2.html">권유리</a>
-                        </dd>
-                        <dd class="navi-second__dd">
-                            <a href="works_memo_individual3.html">김희제</a>
-                        </dd>
-                        <dd class="navi-second__dd">
-                            <a href="works_memo_individual4.html">신유진</a>
-                        </dd>
-                        <dd class="navi-second__dd">
-                            <a href="works_memo_individual5.html">우승용</a>
+                            <a href="/data/pages/works_me_individual5.html">이황준</a>
                         </dd>
                     </dl>
                     <dl class="navi-second__dl">
-                        <dt class="navi-second__dt"><a href="works_me_team.html">Team. Memory ‣</a></dt>
+                        <dt class="navi-second__dt"><a href="/data/pages/works_memo_team.html">Team. Memo ‣</a></dt>
                         <dd class="navi-second__dd">
-                            <a href="works_memory_individual1.html">김민송</a>
+                            <a href="/data/pages/works_memo_individual1.html">권성화</a>
                         </dd>
                         <dd class="navi-second__dd">
-                            <a href="works_memory_individual2.html">박수빈</a>
+                            <a href="/data/pages/works_memo_individual2.html">권유리</a>
                         </dd>
                         <dd class="navi-second__dd">
-                            <a href="works_memory_individual3.html">서혜인</a>
+                            <a href="/data/pages/works_memo_individual3.html">김희제</a>
                         </dd>
                         <dd class="navi-second__dd">
-                            <a href="works_memory_individual4.html">이우진</a>
+                            <a href="/data/pages/works_memo_individual4.html">신유진</a>
                         </dd>
+                        <dd class="navi-second__dd">
+                            <a href="/data/pages/works_memo_individual5.html">우승용</a>
+                        </dd>
+                    </dl>
+                    <dl class="navi-second__dl">
+                        <dt class="navi-second__dt"><a href="/data/pages/works_memory_team.html">Team. Memory ‣</a></dt>
+                        <dd class="navi-second__dd">
+                            <a href="/data/pages/works_memory_individual1.html">김민송</a>
+                        </dd>
+                        <dd class="navi-second__dd">
+                            <a href="/data/pages/works_memory_individual2.html">박수빈</a>
+                        </dd>
+                        <dd class="navi-second__dd">
+                            <a href="/data/pages/works_memory_individual3.html">서혜인</a>
+                        </dd>
+                        <dd class="navi-second__dd">
+                            <a href="/data/pages/works_memory_individual4.html">이우진</a>
+                        </dd>
+                        
                     </dl>
                 </li>
                 <li class="navi-first__li">
-                    <a href="about.html" class="bold">About</a>
+                    <a href="/data/pages/members.html" class="bold">Members</a>
                 </li>
             </ul>
         </div>
